--- a/DoctorSurgery/Admin/AdminWindow.xaml
+++ b/DoctorSurgery/Admin/AdminWindow.xaml
@@ -1,12 +1,63 @@
-﻿<Window x:Class="DoctorSurgery.AdminWindow"
+﻿<Window x:Class="DoctorSurgeryUI.Admin.AdminWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DoctorSurgery"
+        xmlns:local="clr-namespace:DoctorSurgeryUI.Admin"
         mc:Ignorable="d"
-        Title="AdminWindow" Height="450" Width="800">
+        Title="AdminWindow" Height="500" Width="800" Background="#FF2D2D2D">    
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="70"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Label Content="Logged in as: " Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="30,10,0,0" VerticalAlignment="Top" Foreground="White"/>
+        <Label Content="*Username*" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="30,10,0,0" VerticalAlignment="Top" Foreground="White"/>
+
+        <GroupBox Header="Patients" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="20" Foreground="White">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>                
+                <Button x:Name="SearchForPatient_Button" Content="Search for Patient" Grid.Row="0" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Center"/>
+                <Button x:Name="ViewAppointments_Button" Content="View Appointments" Grid.Row="1" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Center"/>                
+            </Grid>
+        </GroupBox>
+
+        <GroupBox Header="Staff" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Margin="20" Foreground="White">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>                
+                <Button x:Name="ViewStaff_Button" Content="View Staff" Grid.Row="0" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Center"/>
+                <Button x:Name="ViewWorkRota_Button" Content="View Work Rota" Grid.Row="1" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Center"/>
+            </Grid>
+        </GroupBox>
         
+
+
     </Grid>
 </Window>
