--- a/DoctorSurgery/Nurse/NurseWindow.xaml
+++ b/DoctorSurgery/Nurse/NurseWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="DoctorSurgery.Nurse.NurseWindow"
+﻿<Window x:Class="DoctorSurgeryUI.Nurse.NurseWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DoctorSurgery.Nurse"
+        xmlns:local="clr-namespace:DoctorSurgeryUI.Nurse"
         mc:Ignorable="d"
-        Title="NurseWindow" Height="450" Width="800">
+        Title="NurseWindow" Height="450" Width="800" Background="#FF2D2D2D">
     <Grid>
         
     </Grid>
