--- a/DoctorSurgery/Staff/StaffWindow.xaml
+++ b/DoctorSurgery/Staff/StaffWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="DoctorSurgeryUI.Doctor.DoctorWindow"
+﻿<Window x:Class="DoctorSurgeryUI.Staff.StaffWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DoctorSurgeryUI.Doctor"
+        xmlns:local="clr-namespace:DoctorSurgeryUI.Staff"
         mc:Ignorable="d"
-        Title="DoctorWindow" Height="450" Width="800" Background="#FF2D2D2D">
+        Title="StaffWindow" Height="450" Width="800" Background="#FF2D2D2D">
     <Grid>
         
     </Grid>
