--- a/DoctorSurgery/MainWindow.xaml
+++ b/DoctorSurgery/MainWindow.xaml
@@ -24,6 +24,6 @@
         <TextBox x:Name="usernameLogin" Grid.Row="1" Grid.Column="1" Margin="82,12,0,13" VerticalAlignment="Center" HorizontalAlignment="Left" Width="200" Height="20" Grid.ColumnSpan="2" />
         <Label Grid.Column="1" Grid.Row="2" Content="Password: " Margin="0,10,66,10" VerticalAlignment="Center" HorizontalAlignment="Right" Height="auto" Foreground="Gainsboro"/>
         <TextBox x:Name="passwordLogin" Grid.Row="2" Grid.Column="1" Margin="82,13,0,12" VerticalAlignment="Center" HorizontalAlignment="Left" Width="200" Height="20" Grid.ColumnSpan="2" />
-        <Button Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="4" Content="Login" HorizontalAlignment="Center" Margin="10"  VerticalAlignment="Center" Height="50" Width="100" FontSize="16" Click="LoginButton_Click"/>
+        <Button Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="4" Content="Login" HorizontalAlignment="Center" Margin="10"  VerticalAlignment="Center" Height="50" Width="100" FontSize="16"/>
     </Grid>
 </Window>
